bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: ';' expected but string literal found.
  if (litMessage()) == "L"{
                       ^BDR:10: error: ';' expected but string literal found.
  if (litMessage()) == "I"{
                       ^BDR:14: error: ';' expected but string literal found.
  if (litMessage()) == "A"{
                       ^BDR:21: error: ';' expected but string literal found.
  if (litMessage()) == "C"{
                       ^BDR:26: error: ';' expected but string literal found.
  if (litMessage()) == "Z"{
                       ^BDR:29: error: ';' expected but string literal found.
  if (litMessage()) == "Y"{
                       ^BDR:33: error: ';' expected but string literal found.
  if (litMessage()) == "X"{
                       ^